chore(eslint): config eslint
Addition of two Eslint plugins, to handle sorting of unused imports and imports. In addition, new
lint rules have been added and the way files are imported from some directories has changed.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,18 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "baseUrl": ".",
+
+    "paths": {
+      "@/pages*": ["./src/pages*"],
+      "@/components*": ["./src/components*"],
+      "@/enums*": ["./src/enums*"],
+      "@/hooks*": ["./src/hooks*"],
+      "@/interfaces*": ["./src/interfaces*"],
+      "@/schemas*": ["./src/schemas*"],
+      "@/styles*": ["./src/styles*"],
+      "@/utils*": ["./src/utils*"]
+    },
 
     /* Linting */
     "strict": true,
