--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@vitejs/plugin-react-swc": "^3.3.2",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.45.0",
+    "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "husky": "^8.0.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
