feat(styles): setup styled components
Installation and setup of Styled Components, creating theme and global styling.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -85,6 +85,7 @@
         "newlinesBetween": "always",
         "groups": [
           "/^react/",
+          "/^styled-components/",
           "/^@/pages/",
           "/^@/components/",
           "/^@/enums/",
