feat(header): prototyping the Header component

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -92,7 +92,7 @@
           "/^@/hooks/",
           "/^@/interfaces/",
           "/^@/schemas/",
-          "/^@/styles/",
+          "/^(?:@\\/styles|\\.\\/styles)/",
           "/^@/utils/",
           [
             "module"
